--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Pickle files (saved models)
+*.pkl
+*.joblib
+
+# Sample / output data files (optional, if you don’t want to include large CSVs)
+*.csv
+*.tsv
+*.json
+*.xlsx
+*.h5
+*.hdf5
+
